--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,19 +13,29 @@
   	<description></description>
   	<servlet-class>rpc.PostItem</servlet-class>
   </servlet>
-  <servlet-mapping>
-  	<servlet-name>PostItem</servlet-name>
-  	<url-pattern>/donor/new_item</url-pattern>
-  </servlet-mapping>
+  
     <servlet>
         <servlet-name>MySchedule</servlet-name>
         <display-name>MySchedule</display-name>
         <description></description>
         <servlet-class>rpc.MySchedule</servlet-class>
     </servlet>
+    <servlet>
+    	<servlet-name>GetItem</servlet-name>
+    	<display-name>GetItem</display-name>
+    	<description></description>
+    	<servlet-class>rpc.GetItem</servlet-class>
+    </servlet>
     <servlet-mapping>
+  	<servlet-name>PostItem</servlet-name>
+  	<url-pattern>/donor/new_item</url-pattern>
+  </servlet-mapping><servlet-mapping>
         <servlet-name>MySchedule</servlet-name>
         <url-pattern>/ngo/my_schedule</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+    	<servlet-name>GetItem</servlet-name>
+    	<url-pattern>/donor/my_item</url-pattern>
     </servlet-mapping>
 
 </web-app>
