--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -43,6 +43,12 @@
   	<description></description>
   	<servlet-class>rpc.MySchedule</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>SearchItem</servlet-name>
+  	<display-name>SearchItem</display-name>
+  	<description></description>
+  	<servlet-class>rpc.SearchItem</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>PostItem</servlet-name>
   	<url-pattern>/donor/new_item</url-pattern>
@@ -66,5 +72,9 @@
   <servlet-mapping>
   	<servlet-name>MySchedule</servlet-name>
   	<url-pattern>/ngo/my_schedule</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>SearchItem</servlet-name>
+  	<url-pattern>/ngo/search_item</url-pattern>
   </servlet-mapping>
 </web-app>
